test/classes/initializers/postInit/args.good
args.chpl:3: error: postInit must have zero arguments
